# sdl3_basic_platformer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  imgui.ini
.zed/: settings.json
assets/: learn_sdl3.tsx  map.csv  map_layer_bg.csv
assets/levels/1/: bg.csv  mid.csv
include/: BgTile.h  Camera.h  Coin.h  DeathScene.h  DebugUI.h  DynTile.h  Enemy.h  Entity.h  Frames.h  Game.h  GameScene.h  Log.h  MainScene.h  Map.h  Player.h  ResourceManager.h  SDLState.h  SceneManager.h  StartScene.h  StaticTile.h  Text.h  Timer.h  UI.h  defer.h
src/: DebugUI.cpp  Entity.cpp  GameScene.cpp  Player.cpp  main.cpp
